--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   "dependencies": {
     "@react-router/node": "^7.9.2",
     "@react-router/serve": "^7.9.2",
+    "@react-spring/web": "^10.0.3",
     "isbot": "^5.1.31",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router": "^7.9.2"
+    "react-icons": "^5.5.0",
+    "react-router": "^7.9.2",
+    "react-use-gesture": "^9.1.3",
+    "swiper": "^12.0.2"
   },
   "devDependencies": {
     "@react-router/dev": "^7.9.2",
